--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,11 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
+  username: gango
+  password: pdpass2019
+  host: localhost
+  port: 5432
+  
 development:
   <<: *default
   database: galisoft_ecommerce_development
